--- a/CarFleetUI/Shared/NavMenu.razor
+++ b/CarFleetUI/Shared/NavMenu.razor
@@ -29,6 +29,26 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Mapa
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="driveoverview">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Drivers
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="driveredit">
+                <span class="oi oi-plus" aria-hidden="true"></span> New driver
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="vehicleassignedit">
+                <span class="oi oi-plus" aria-hidden="true"></span> Vehicle assignment
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="">
+                <span class="oi oi-plus" aria-hidden="true"></span> Tracking history
+            </NavLink>
+        </div>
     </nav>
 </div>
 
