--- a/CarFleetUI/Pages/DriverOverview.razor
+++ b/CarFleetUI/Pages/DriverOverview.razor
@@ -34,7 +34,7 @@ else
                     <td>@driver.Id</td>
                     <td>@driver.FirstName</td>
                     <td>@driver.LastName</td>
-                    <td>@driver.BirthDate</td>
+                    <td>@driver.BirthDate.ToShortDateString()</td>
                     <td>@driver.Street</td>
                     <td>@driver.City</td>
                     <td>@driver.PhoneNumber</td>
