--- a/CarFleetUI/Shared/NavMenu.razor
+++ b/CarFleetUI/Shared/NavMenu.razor
@@ -45,8 +45,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="">
-                <span class="oi oi-plus" aria-hidden="true"></span> Tracking history
+            <NavLink class="nav-link" href="assignoverview">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Tracking history
             </NavLink>
         </div>
     </nav>
