authentication and authorization 1

--- a/CarFleetUI/Pages/VehicleEdit.razor
+++ b/CarFleetUI/Pages/VehicleEdit.razor
@@ -2,6 +2,7 @@
 @page "/vehicleedit/{VehicleId}"
 @inherits VehicleEditBase
 @using CarFleetModels
+@*@attribute [Authorize(Policy  = "Editor")]*@
 
     <section class="employee-edit">
         @if (!Saved)
