--- a/CarFleetUI/Pages/VehicleOverview.razor
+++ b/CarFleetUI/Pages/VehicleOverview.razor
@@ -1,5 +1,7 @@
 ﻿@page "/vehicleoverview"
 @inherits VehicleOverviewBase
+@*@attribute [Authorize]*@
+@*@attribute [Authorize(Roles = "Administrator")]*@
 
 <h1 class="page-title">All vehicle</h1>
 
