--- a/CarFleetUI/Shared/NavMenu.razor
+++ b/CarFleetUI/Shared/NavMenu.razor
@@ -14,6 +14,16 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>   
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="login">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Log in
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="useroverview">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Users
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vehicleoverview">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicles
@@ -47,6 +57,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="assignoverview">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Tracking history
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logout">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Logout
             </NavLink>
         </div>
     </nav>
