--- a/CarFleetUI/_Imports.razor
+++ b/CarFleetUI/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using CarFleetUI
 @using CarFleetUI.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
