--- a/CarFleetUI/Shared/NavMenu.razor
+++ b/CarFleetUI/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Users
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="useredit">
+                <span class="oi oi-plus" aria-hidden="true"></span> New user
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vehicleoverview">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicles
